Better debugging support
show line and token number of 1st mismatch, redirect stderr to stdout, exclude lines starting with "DBG#~ ". Attempts to fix #5 and #29